--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
-/*@import url{'https://fonts.googleapis.com/css?family=Press
-    +Start+2P&isplay=swap'};*/
+@import url('https://fonts.googleapis.com/css?family=Press+Start+2P&isplay=swap');
 
     * {
         margin: 0;
@@ -38,4 +37,91 @@
         width: 52rem;
         display: flex;
         flex-direction: column;
+        align-items: center;
     }
+
+    .right{
+        width: 52rem;
+        font-size: 2rem;
+    }
+
+    /*ELEMENTS STYLE*/
+    h1{
+        font-size: 4rem;
+        text-align: center;
+        position: absolute;
+        width: 100%;
+        top: 52%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+
+    .number {
+        background: #eee;
+        color: #333;
+        font-size: 6rem;
+        width: 15rem;
+        padding: 3rem 0rem;
+        text-align: center;
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        transform: translate(-50%, 50%);
+    }
+
+    .between{
+        font-size: 1.4rem;
+        position: absolute;
+        top: 2rem;
+        right: 2rem;
+    }
+
+    .again {
+        position: absolute;
+        top: 2rem;
+        left: 2rem;
+    }
+
+    .guess {
+        background: none;
+        border: 4px solid #eee;
+        font-family: inherit;
+        color: inherit;
+        font-size: 5rem;
+        padding: 2.5rem;
+        width: 25rem;
+        text-align: center;
+        display: block;
+        margin-bottom: 3rem;
+    }
+
+    .btn {
+        border: none;
+        background-color: #eee;
+        color: #222;
+        font-size: 2rem;
+        font-family: inherit;
+        padding: 2rem 3rem;
+        cursor: pointer;
+    }
+
+    .btn:hover {
+        background-color: #ccc;
+    }
+
+    .message {
+        margin-bottom: 8rem;
+        height: 3rem;
+    }
+
+    .color{
+        background-color: #60b347;
+    }
+
+   /* .linkStyle {
+        text-decoration: none;
+        color: #222;
+        font-size: 2rem;
+        font-family: inherit;
+
+    }*/
